style.css
/* ... */
input[type="search"] {
  /* Addresses appearance set to searchfield in S5, Chrome */

  -webkit-appearance: textfield;
  /* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */

  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
input[type="search"]::-webkit-search-decoration {
  /* Corrects inner padding displayed oddly in S5, Chrome on OSX */

  -webkit-appearance: none;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
  /* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */

  border: 0;
  padding: 0;
}
input[type=text],
input[type=email],
input[type=password],
textarea {
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color: #666;
  border: 1px solid #ccc;
  border-radius: 3px;
}
input[type=text]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
  color: #111;
}
input[type=text],
input[type=email],
input[type=password] {
  padding: 3px;
}
textarea {
  /* Removes default vertical scrollbar in IE6/7/8/9 */

  overflow: auto;
  /* Improves readability and alignment in all browsers */

  vertical-align: top;
}
/* Alignment */
.alignleft {
  display: inline;
  float: left;
  margin-right: 1.5em;
}
.alignright {
  display: inline;
  float: right;
  margin-left: 1.5em;
}
.aligncenter {
  clear: both;
  display: block;
  margin: 0 auto;
}
/* Text meant only for screen readers */
.assistive-text {
  clip: rect(1px 1px 1px 1px);
  /* IE6, IE7 */

  clip: rect(1px, 1px, 1px, 1px);
  position: absolute !important;
}
.page-links {
  clear: both;
}
.site-title a {
  color: inherit;
}
body {
  background: #dadada;
}
/* =General Layout
----------------------------------------------- */
#page-wrapper {
  padding-top: 20px;
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  width: 1080px;
  margin: 0 auto;
}
.layout-full #page-wrapper {
  width: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}
.layout-full #page-wrapper .full-container {
  max-width: 1080px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}
header#masthead {
  background: #fcfcfc;
  padding: 25px 35px;
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
header#masthead hgroup {
  margin-bottom: 40px;
  margin-top: 20px;
  position: relative;
}
header#masthead hgroup a {
  color: inherit;
  text-decoration: none;
}
header#masthead hgroup h1 {
  color: #666666;
  font-weight: 100;
  font-size: 36px;
  line-height: 1em;
}
header#masthead hgroup img {
  max-width: 100%;
  height: auto;
}
header#masthead hgroup .support-text {
  line-height: 1.2em;
  position: absolute;
  right: 0;
  top: 50%;
  margin-top: -0.6em;
  color: #4b4b4b;
  font-style: italic;
  max-width: 50%;
}
#main {
  zoom: 1;
}
#main:before {
  content: '';
  display: block;
}
#main:after {
  content: '';
  display: table;
  clear: both;
}
#primary {
  float: left;
  width: 71.287%;
}
/* Full Width Primary blocks */
.siteorigin-panels-home #primary,
.page-template-templatestemplate-full-php #primary,
.page-template-templatestemplate-full-notitle-php #primary {
  width: auto;
  float: none;
}
#secondary {
  float: right;
  width: 23.762%;
}
#main {
  background: #FCFCFC;
  padding: 35px;
}
#main-slider {
  line-height: 0;
}
#main-slider .flexslider {
  margin-bottom: 0;
}
#main-slider h1 {
  font-weight: 100;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
}
#main-slider .text-em-wrapper {
  padding: 10px 50px;
  background: rgba(0, 0, 0, 0.25);
  border: 3px solid white;
  font-weight: bold;
}
/* =Responsive Layout
----------------------------------------------- */
/* We consider 680px to be mobile resolution */
@media (max-width: 680px) {
  body.responsive header#masthead hgroup {
    text-align: center;
  }
  body.responsive header#masthead hgroup .support-text {
    position: static;
    display: block;
    margin-top: 30px;
    max-width: 100%;
  }
  body.responsive #primary,
  body.responsive #secondary {
    width: auto;
    float: none;
  }
  body.responsive #secondary {
    margin-top: 35px;
  }
  body.responsive #footer-widgets .widget {
    display: block;
    margin-bottom: 25px;
    float: none;
  }
  body.responsive #footer-widgets .widget:last-child {
    margin-bottom: 0;
  }
}
body.responsive #page-wrapper {
  max-width: 1080px;
  width: auto;
  overflow-x: hidden;
}
body.responsive.layout-full #page-wrapper {
  max-width: 100%;
}
body.responsive.layout-full #page-wrapper .full-container {
  max-width: 1080px;
  margin-left: auto;
  margin-right: auto;
}
/* =Menu
----------------------------------------------- */
.main-navigation {
  margin: 0 -35px -25px -35px;
  background: #343538;
  font-size: 13px;
  /* General menu link styling */

  /* For when the menu becomes a sticky menu */

  /* Font awesome icons */

}
.main-navigation ul {
  list-style: none;
  margin: 0;
  padding-left: 0;
  zoom: 1;
  /* Second level menu items */

}
.main-navigation ul:before {
  content: '';
  display: block;
}
.main-navigation ul:after {
  content: '';
  display: table;
  clear: both;
}
.main-navigation ul li {
  display: block;
  position: relative;
  float: left;
}
.main-navigation ul li:hover > a {
  background: #00bcff;
  color: #FFFFFF;
}
.main-navigation ul li:hover > a [class^="icon-"] {
  color: #FFFFFF;
}
.main-navigation ul li a {
  padding: 20px 35px;
  -ms-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.main-navigation ul li a,
.main-navigation ul li a > * {
  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  transition: all 0.4s ease;
}
/* ... */

